Bug 358659 - Muon package manager does not close
Summary: Muon package manager does not close
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 5.4.3
Platform: Kubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 357205 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-27 23:07 UTC by Lastique
Modified: 2016-03-18 10:40 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lastique 2016-01-27 23:07:48 UTC
The main package manager window does not close. Neither Alt+F4 nor the X button in the window decoration close the application - it seem to simply ignore these events. It does close if I select File->Quit. It also closes if I send SIGINT to the process. No other applications on the machine exhibit this problem.

Reproducible: Always

Steps to Reproduce:
1. Start Muon package manager.
2. Try to close it by pressing Alt+F4 or the close window button in the window decoration.


Actual Results:  
The application doesn't close.

Expected Results:  
The application should close.

The problem started to happen after a recent update. KDE is installed from kubuntu-backports.

Kubuntu 15.10, x86_64.
Comment 1 Paul L. 2016-02-28 23:57:12 UTC
I can confirm this.

KDE neon:
Muon Package Manager (Version 5.5.0; KDE Frameworks 5.20.0; Qt 5.5.1 (built against 5.5.1); The xcb windowing system)
KDE Plasma Version: 5.4.4
Qt Version: 5.5.1
Kernel Version: 4.2.0-30-generic
Workplace Theme: Breeze
Cursor Theme: Breeze
Color Scheme: Breeze

and,

Kubuntu 16.04:
Muon Package Manager (Version 5.4.3; KDE Frameworks 5.15.0; Qt 5.5.1 (built agains 5.4.2); The xcb windowing system)
KDE Plasma Version: 5.4.3
Qt Version: 5.5.1
Kernel Version: 4.4.0-7-generic
Workplace Theme: Breeze
Cursor Theme: Breeze
Color Scheme: Breeze

It isn't possible to close the application by clicking on the circled X icon in the upper-right corner of the application window. Nothing happens. File > Quit works as expected.

This anomalous behavior of Muon Package Manager is not present in Kubuntu 15.10 and earlier.
Comment 2 Jeanne Varasco 2016-03-01 12:54:00 UTC
Close button on window hovered but don't close the window.
Comment 3 Carlo Vanini 2016-03-03 00:33:17 UTC
Git commit 465ca5fcf203fa190b90823907f358954b922f5f by Carlo Vanini.
Committed on 03/03/2016 at 00:28.
Pushed by vanini into branch 'master'.

Fix muon not closing with window close button.

The variable m_canExit was not initialized and did prevent muon from exiting
when closed from the window manager. Remove it because it is never changed and
remove canExit() because it is in the wrong place anyway to prevent exiting
while acting on packages. It should be in backend.

Testing Done:
* open muon close by clicking the X button in the window decoration or with
* Alt+F4

Closing with File -> Exit or Ctrl+Q does not call MainWindow::queryClose() and
therefore did always work.

REVIEW: 127249

M  +1    -1    src/MainWindow.cpp
M  +0    -4    src/muonapt/QAptActions.h

http://commits.kde.org/muon/465ca5fcf203fa190b90823907f358954b922f5f
Comment 4 Jeanne Varasco 2016-03-10 09:37:53 UTC
Now, the window closes if you are logged as "root" but not if you are logged as user with sudo rights.
Comment 5 Carlo Vanini 2016-03-18 10:40:39 UTC
*** Bug 357205 has been marked as a duplicate of this bug. ***