src/muonapt/QAptActions.h
@@ -55,9 +55,6 @@ public:
     void initError();
     void displayTransactionError(QApt::ErrorCode error, QApt::Transaction* trans);
     KActionCollection* actionCollection();
-    
-    void setCanExit(bool e) { m_canExit = e; }
-    bool canExit() const { return m_canExit; }
 
 signals:
     void shouldConnect(bool isConnected);
@@ -103,7 +100,6 @@ private:
     QList<QAction *> m_actions;
     bool m_distUpgradeAvailable;
     QNetworkConfigurationManager* m_config;
-    bool m_canExit;
 
 };
 
